# hsf-training-cmake-webpage

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  Gemfile  LICENSE.md  README.md  _config.yml  aio.md  authors.html  index.md  readme.md  reference.md  setup.md
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  template.yml  website.yml
_episodes/: 01-intro.md  02-building.md  03-cmakelists.md  04-targets.md  05-variables.md  06-projectstructure.md  07-commonproblems.md  08-debugging.md  09-findingpackages.md  10-root.md  11-functions.md  11-installing.md
_extras/: discuss.md  guide.md
_includes/: aio-script.md  authors.html  carpentries.html  cmake_links.md  curriculum.html  favicons.html  hl_code.html  lesson_footer.html  links.md  navbar.html  showlinks.md  workshop_calendar.html  workshop_footer.html
_includes/code/: 03-structure  05a-root  05b-root
_includes/code/00-intro/: CMakeLists.txt  simple.c
_includes/code/01-simple/: CMakeLists.txt
_includes/code/03-structure/: CMakeLists.txt
_includes/code/03-structure/docs/: mainpage.md
_includes/code/03-structure/src/: CMakeLists.txt
_includes/code/03-structure/tests/: CMakeLists.txt
_includes/code/04-debug/: simple_lib.c
_includes/code/05a-root/: CMakeLists.txt
_includes/code/05b-root/: CMakeLists.txt  README.md
_includes/code/06-functions/: complex.cmake
_layouts/: lesson.html
assets/css/: lesson.scss
code/: 03-structure  05a-root  05b-root
code/00-intro/: simple.c
code/01-simple/: simple_example.cpp  simple_lib.cpp
code/02-variables/: cache.cmake  local.cmake
code/03-structure/: CMakeLists.txt  README.md
code/03-structure/apps/: CMakeLists.txt  app.cpp
code/03-structure/cmake/: add_FetchContent_MakeAvailable.cmake
code/03-structure/docs/: CMakeLists.txt  mainpage.md
code/03-structure/include/modern/: lib.hpp
code/03-structure/src/: CMakeLists.txt  lib.cpp
code/03-structure/tests/: CMakeLists.txt  testlib.cpp
code/04-debug/: CMakeLists.txt  simple_example.c  simple_lib.c  simple_lib.h
code/05a-root/: CMakeLists.txt
code/05b-root/: CMakeLists.txt
code/06-functions/: complex.cmake
data/: cmake_links.py
